fixed line breaks on h2

--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ body {
 .section h2 {
     text-align: center;
     margin: 1em auto;
-    word-break: break-all;
+    word-break: normal;
     max-width: 50vw;
 }
 
